# gstzmq

./: .gitignore  CMakeLists.txt  README.md
include/: gstzmqsink.h  gstzmqsrc.h
src/: gstzmqsink.cpp  gstzmqsrc.cpp  plugin.cpp
